--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -8,7 +7,7 @@
   </head>
   <body>
     <a href="https://www.google.com"><img height="300px"
-      src="Images/t.png"
+      src="images/t.png"
       alt="The Pathar"
     /> </a>
     <h1>First heading of the website</h1>
